# templatemail

./: .gitignore  .travis.yml  LICENSE  LICENSE-mailgun-templates  Pipfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
docs/: about.md  engines.md  index.md  mailgun-templates.md  templates.md
templatemail/: __init__.py
templatemail/engines/: __init__.py  mailgun.py  smtp.py
templatemail/templates/: _render_html_body.html  _render_subject.html  _render_text_body.html  base.html  simple.html  standard_css.html
templatemail/templates/mailgun-transactional/: action.html  alert.html  billing.html
tests/: test_templateMail.py
tests/test_templates/: simple_template.html
